Introducing Enums and minor performance improvement